[gd_scene load_steps=3 format=3 uid="uid://dxc6iu2h8ywfh"]

[ext_resource type="Script" path="res://game/scene_ui/tower_information_panel.gd" id="1_x4slg"]
[ext_resource type="PackedScene" uid="uid://w5eopltwtgwt" path="res://game/scene_ui/stat_display.tscn" id="2_68wuj"]

[node name="TowerInformation" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_x4slg")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tower name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StatDisplay" parent="VBoxContainer/StatContainer" instance=ExtResource("2_68wuj")]
layout_mode = 2
size_flags_horizontal = 3
_font_size = 24
display_mode = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 24
disabled = true
text = "Upgrade Tree"
